update launcher & import changes from tmnationsforever

--- a/snap/gui/ea-origin-wine.desktop
+++ b/snap/gui/ea-origin-wine.desktop
@@ -3,7 +3,7 @@ Type=Application
 Encoding=UTF-8
 Name=EA Origin
 Comment=EA Origin
-Exec=tmnationsforever
+Exec=ea-origin-wine
 Icon=${SNAP}/meta/gui/ea-origin.png
 Categories=Game;
 Terminal=false
